--- a/Codeforces/Components/Cells/InfoCellView.xib
+++ b/Codeforces/Components/Cells/InfoCellView.xib
@@ -1,56 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="54" id="KGk-i7-Jjw" customClass="InfoCell" customModule="Code_Forces" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" id="rgf-zK-Q3V" customClass="InfoCell" customModule="Code_Forces" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="390" height="44"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rgf-zK-Q3V" id="1Hw-xg-yns">
+                <rect key="frame" x="0.0" y="0.0" width="390" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contest name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y3J-m9-oBx">
-                        <rect key="frame" x="16" y="12" width="288" height="21"/>
-                        <accessibility key="accessibilityConfiguration" identifier="ContestName"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yUP-aI-Qxa">
+                        <rect key="frame" x="20" y="10" width="362" height="24"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phase" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ftT-8p-Syo">
-                        <rect key="frame" x="16" y="41" width="288" height="17"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="17" id="QKP-2L-zqk"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="ftT-8p-Syo" secondAttribute="trailing" constant="16" id="4X1-f7-Lq0"/>
-                    <constraint firstAttribute="trailing" secondItem="y3J-m9-oBx" secondAttribute="trailing" constant="16" id="DPP-Vm-TBu"/>
-                    <constraint firstItem="ftT-8p-Syo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="IwH-FV-Aw1"/>
-                    <constraint firstItem="y3J-m9-oBx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="PoF-tT-gXn"/>
-                    <constraint firstItem="y3J-m9-oBx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="W7k-r5-EtC"/>
-                    <constraint firstAttribute="bottom" secondItem="ftT-8p-Syo" secondAttribute="bottom" constant="12" id="jsm-EU-kie"/>
-                    <constraint firstItem="ftT-8p-Syo" firstAttribute="top" secondItem="y3J-m9-oBx" secondAttribute="bottom" constant="8" id="q7I-AD-AdX"/>
+                    <constraint firstItem="yUP-aI-Qxa" firstAttribute="top" secondItem="1Hw-xg-yns" secondAttribute="top" constant="10" id="74T-N8-u7d"/>
+                    <constraint firstAttribute="bottom" secondItem="yUP-aI-Qxa" secondAttribute="bottom" constant="10" id="Ngg-qM-jnm"/>
+                    <constraint firstAttribute="trailing" secondItem="yUP-aI-Qxa" secondAttribute="trailing" constant="8" id="aBw-76-Opl"/>
+                    <constraint firstItem="yUP-aI-Qxa" firstAttribute="leading" secondItem="1Hw-xg-yns" secondAttribute="leading" constant="20" symbolic="YES" id="amw-GO-OJR"/>
                 </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <accessibility key="accessibilityConfiguration" identifier="ContestCell"/>
             <connections>
-                <outlet property="contestName" destination="y3J-m9-oBx" id="cAf-pL-GNH"/>
-                <outlet property="phase" destination="ftT-8p-Syo" id="RS9-Hb-Ua8"/>
+                <outlet property="infoLabel" destination="yUP-aI-Qxa" id="lO0-Fy-RbU"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="111.16071428571428"/>
+            <point key="canvasLocation" x="-81" y="4"/>
         </tableViewCell>
     </objects>
 </document>
