--- a/Codeforces/ContestDetailModule/View/ContestDetailViewController.xib
+++ b/Codeforces/ContestDetailModule/View/ContestDetailViewController.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -22,30 +23,45 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" contentMode="scaleToFill" directionalLockEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tN9-Ts-eTg">
-                    <rect key="frame" x="0.0" y="398.5" width="414" height="497.5"/>
+                    <rect key="frame" x="0.0" y="358.5" width="414" height="537.5"/>
                     <subviews>
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k0m-dF-0ow" userLabel="Content view">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="497.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="537.5"/>
                             <subviews>
                                 <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="uuR-eL-Itq">
-                                    <rect key="frame" x="0.0" y="20" width="414" height="469.5"/>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <rect key="frame" x="0.0" y="20" width="414" height="509.5"/>
+                                    <color key="backgroundColor" name="AppTheme"/>
                                     <connections>
                                         <outlet property="dataSource" destination="-1" id="DoM-xb-6CZ"/>
                                         <outlet property="delegate" destination="-1" id="h2B-75-GGZ"/>
                                     </connections>
                                 </tableView>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4GU-Sc-a4r">
+                                    <rect key="frame" x="184.5" y="8" width="45" height="4"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="45" id="jJa-td-aRD"/>
+                                        <constraint firstAttribute="height" constant="4" id="vde-rj-Gnf"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="2"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </view>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="uuR-eL-Itq" secondAttribute="bottom" constant="8" id="0vD-dX-OoA"/>
                                 <constraint firstAttribute="trailing" secondItem="uuR-eL-Itq" secondAttribute="trailing" id="91W-dn-9oE"/>
                                 <constraint firstItem="uuR-eL-Itq" firstAttribute="top" secondItem="k0m-dF-0ow" secondAttribute="top" constant="20" symbolic="YES" id="Rca-oc-rxN"/>
                                 <constraint firstItem="uuR-eL-Itq" firstAttribute="leading" secondItem="k0m-dF-0ow" secondAttribute="leading" id="SpN-hD-nQE"/>
+                                <constraint firstItem="4GU-Sc-a4r" firstAttribute="top" secondItem="k0m-dF-0ow" secondAttribute="top" constant="8" id="Xr9-nr-qDL"/>
+                                <constraint firstItem="4GU-Sc-a4r" firstAttribute="centerX" secondItem="k0m-dF-0ow" secondAttribute="centerX" id="xdb-o0-1o8"/>
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" name="AppTheme"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="k0m-dF-0ow" secondAttribute="trailing" id="BZb-8t-FNE"/>
                         <constraint firstAttribute="bottom" secondItem="k0m-dF-0ow" secondAttribute="bottom" id="Jv4-Ux-daW"/>
@@ -57,16 +73,20 @@
                 </scrollView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="tN9-Ts-eTg" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="50O-Zb-VRV"/>
-                <constraint firstItem="tN9-Ts-eTg" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="350.5" id="Z4P-Ns-Evz"/>
                 <constraint firstItem="tN9-Ts-eTg" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="eqr-xB-UK7"/>
                 <constraint firstAttribute="bottom" secondItem="tN9-Ts-eTg" secondAttribute="bottom" id="ypg-II-J02"/>
+                <constraint firstItem="tN9-Ts-eTg" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="1.2:2" priority="750" id="ysw-DC-vlB"/>
             </constraints>
             <point key="canvasLocation" x="137.68115942028987" y="102.45535714285714"/>
         </view>
     </objects>
     <resources>
+        <namedColor name="AppTheme">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
